--- a/BeActive/BeActive WatchKit App/ActivityInteface.storyboard
+++ b/BeActive/BeActive WatchKit App/ActivityInteface.storyboard
@@ -14,8 +14,37 @@
             <objects>
                 <controller identifier="Activity" id="zD9-Y8-AD6" customClass="ActivityInterfaceController" customModule="BeActive_WatchKit_Extension">
                     <items>
-                        <label alignment="left" text="Activity" id="Bl1-RX-V81"/>
+                        <label alignment="center" text="---" id="Bl1-RX-V81">
+                            <color key="textColor" red="0.95294117649999999" green="0.50588235290000005" blue="0.50588235290000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <fontDescription key="font" type="system" pointSize="38"/>
+                        </label>
+                        <label alignment="center" text="BEATS/MINUTE" id="aye-IH-Bkv"/>
+                        <separator alignment="left" id="Oou-ak-vCf"/>
+                        <button width="1" height="0.25" alignment="left" title="PAUSE" id="fjo-3Q-7gt">
+                            <color key="backgroundColor" red="0.58431372550000005" green="0.88235294119999996" blue="0.82745098039999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="pauseButtonPressed" destination="zD9-Y8-AD6" id="a16-yT-WJt"/>
+                            </connections>
+                        </button>
+                        <button width="1" height="0.25" alignment="left" hidden="YES" title="CONTINUE" id="OxS-S3-Eog">
+                            <color key="backgroundColor" red="0.58431372550000005" green="0.88235294119999996" blue="0.82745098039999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="continueButtonPressed" destination="zD9-Y8-AD6" id="OGd-Aa-Z3v"/>
+                            </connections>
+                        </button>
+                        <button width="1" height="0.25" alignment="left" title="END" id="ymF-hE-FA3">
+                            <color key="backgroundColor" red="0.95294117649999999" green="0.50588235290000005" blue="0.50588235290000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="endButtonPressed" destination="zD9-Y8-AD6" id="xPE-uf-ZEB"/>
+                            </connections>
+                        </button>
                     </items>
+                    <connections>
+                        <outlet property="continueButton" destination="OxS-S3-Eog" id="Sxk-UA-lBq"/>
+                        <outlet property="endButton" destination="ymF-hE-FA3" id="fdi-Ul-BIU"/>
+                        <outlet property="heartRateLabel" destination="Bl1-RX-V81" id="7TY-pn-1kE"/>
+                        <outlet property="pauseButton" destination="fjo-3Q-7gt" id="hF0-EP-dZG"/>
+                    </connections>
                 </controller>
             </objects>
             <point key="canvasLocation" x="72" y="2"/>
